---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise()
	.then(() => {})
	.finally(() => {});

```

## Result

```
instanceof Promise
```

## Registered types

```
Thin TypeId(0) => sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(0)
}

Thin TypeId(1) => instanceof Promise<number>

Thin TypeId(2) => Promise.prototype.then

Thin TypeId(3) => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: void
}

Thin TypeId(4) => instanceof Promise

Thin TypeId(5) => Promise.prototype.finally

Global TypeId(0) => instanceof Promise<number>

Global TypeId(1) => instanceof Promise<number>
```
